<resources>
    <string name="app_name">Gift and Flower Delivery app</string>
    <string name="please_choose_an_option">Please Choose an Option</string>
    <string name="flower">flower</string>
    <string name="welcome_to_the_application">Welcome to the Application</string>
    <string name="gift">Gift</string>
    <string name="cart">cart</string>
    <string name="favorites">favorites</string>
    <string name="item_name">Item Name</string>
    <string name="item_price">Item Price</string>
    <string name="Favorites">Favorites</string>
    <string name="gifts">Gifts</string>
    <string name="flowers">Flowers</string>
    <string name="item_prices">Item price</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="your_item">Your Item</string>
    <string name="Cart">Cart</string>
    <string name="checkout">Checkout</string>
    <string name="name">Name</string>
    <string name="credit_card_info">Credit Card info</string>
    <string name="address">Address</string>
    <string name="delivery">Delivery</string>
    <string name="pick_up">Pick-Up</string>
    <string name="cost">Cost</string>
    <string name="total_cost">Total Cost</string>
    <string name="confirm">Confirm</string>
    <string name="order_confirmed">Order Confirmed</string>
    <string name="delivery_status">Delivery Status</string>
    <string name="_1_00">1:00</string>
    <string name="track_order_on_google">Track order on Google</string>
    <string name="back_to_welcome_page">Back to Welcome Page</string>
</resources>